pb margin collapse fixed

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -186,7 +186,7 @@ nav img {
 	width: 85%;
 }
 #portfolio h2 {
-	margin-bottom: 50px;
+	margin-bottom: 35px;
 }
 .modifier {
 	position: absolute;
